# africa-economic-outlook

./: .gitignore  African GDP Growth Forecasting MVP Report.md  README.md  african-economic-outlook.csv  app.py  data_loader.py  data_prep.py  eda_and_viz.py  eda_insights.txt  feature_importance_data.csv  feature_split.py  forecasting_model.py  forecasting_results.json  gdp_growth_clean_data.csv  gdp_growth_final_clean_data.csv  gdp_growth_multivariate_data.csv  initial_filtered_data.csv  main.py  model_insights.txt  model_summary.py  pyproject.toml  requirements.txt  test_data.csv  train_data.csv
